--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint --ignore-path .gitignore . --quiet --ext .js",
-    "test": "jest --coverage",
+    "test": "jest --coverage --no-cache",
     "test:watch": "jest --watchAll"
   },
   "author": "Chuangker",
@@ -36,7 +36,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jest": "^21.2.1",
-    "static-server": "^2.0.6"
+    "jest": "^24.8.0",
+    "static-server": "^2.2.1"
   }
 }
